<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ToneDef</string>
    <string name="version">Release 20</string>
    <string name="about_whatsnew">What\'s New?</string>
    <string name="about_whatsnew_text">
        - Fixed theme issues causing config dialog rendering problems (Good catch, @tacarrie!)\n\n
        PREVIOUSLY:\n\n
        - Cleaned up some of the code\n
        - Improved accuracy of one-shot sounds\n
        - Added better error checking for some operations\n
        - Implements modern Android permission requests\n
        - Changes to appease the Play Store\n
        - Tone playback is now more stable on long presses. (Thanks, tildearrow!)\n
        - Sequence dialing now parses extended DTMF; no longer forces digits-only input. (Thanks, Tomino2112!)\n\n
    </string>
    <string name="about_knownissues">Known Issues</string>
        <string name="about_knownissues_text">
            - Playback on older/lower-spec devices (HTC Hero, G1, etc) is sketchy.\n\n
            - Slight \'clicking\' sound audible between tone and silence on some devices; possible fix forthcoming.
        </string>
    <string name="skrillex">CORE</string>
    <string name="no_contact">No phone number associated with contact.</string>
    <string name="menu_contactlist">Use Contact Number</string>
    <string name="menu_config">Settings</string>
    <string name="ex_dial">Dial Tone</string>
    <string name="ex_ringback">Ringback</string>
    <string name="ex_euroringback">Ringback [Europe]</string>
    <string name="ex_busy">Busy</string>
    <string name="ex_offhook">Off-Hook</string>
    <string name="ex_ctone">\"C-Tone\"</string>
    <string name="dtmf">DTMF</string>
    <string name="bluebox">Blue Box</string>
    <string name="redbox">Red Box</string>
    <string name="settings">CONFIG</string>
    <string name="extras">EXTRAS</string>
    <string name="about">ABOUT</string>
    <string name="dialing_string_hint">Phone #</string>
    <string name="dialing_string_wait_msg">Tap whenever you\'re ready…</string>
    <string name="close">Close</string>
    <string name="other_dialtone_de">Dialtone [DE]</string>
    <string name="other_dialtone_fr">Dialtone [FR]</string>
    <string name="other_dialtone_jp">Dialtone [JP]</string>
    <string name="other_ringback_jp">Ringback [JP]</string>
    <string name="other_ringback_it">Ringback [IT]</string>
    <string name="other_dialtone_it">Dialtone [IT]</string>
    <string name="store_review_begging">If you like ToneDef, why not help me out and leave a rating on the Android Market (or your favorite app store)? :)</string>
    <string name="OK">OK</string>
    <string name="dial_button">Dial</string>
    <string name="redbox_25cents">25c</string>
    <string name="redbox_10cents">10c</string>
    <string name="redbox_5cents">5c</string>
    <string name="redbox_10p">10p</string>
    <string name="redbox_50cents">50p</string>
    <string name="dial_contact">Dial Contact</string>
    <string name="settings_full">Settings</string>
    <string name="desc_ringboxtones">Red Box Tones</string>
    <string name="desc_blueboxdialpad">Blue Box Dial Pad</string>
    <string name="desc_dtmf_dialpad">DTMF Dial Pad</string>
    <string name="github_forkme">Fork Me!</string>
    <string name="country_usa">USA</string>
    <string name="country_france">France</string>
    <string name="country_germany">Germany</string>
    <string name="country_japan">Japan</string>
    <string name="country_italy">Italy</string>
    <string name="ringback">Ringback</string>
    <string name="dialtone">Dialtone</string>
    <string name="busy">Busy</string>
    <string name="desc_dialtone">A dial tone is a telephony signal used to indicate that the telephone exchange is working, has recognized an off-hook, and is ready to accept a call.</string>
    <string name="sis_ineffective">SIS - Ineffective</string>
    <string name="sis_intercept">SIS - Intercept</string>
    <string name="sis_nocircuit">SIS - No Circuit</string>
    <string name="off_hook">Off Hook</string>
    <string name="recall_tone">Recall Tone</string>
    <string name="desc_ringback">A ringback tone is an audible indication that is heard on the telephone line by the caller while the phone they are calling is being rung. It is normally a repeated tone, designed to assure the calling party that the called party\'s line is ringing, although the ring-back tone may be out of sync with the ringing signal.</string>
    <string name="country_uk">UK</string>
    <string name="confirmation">Confirmation</string>
    <string name="call_waiting">Call Waiting</string>
    <string name="congestion">Congestion</string>
    <string name="disconnect">Disconnect</string>
    <string name="refusal_switching">Refusal/Switching</string>
    <string name="number_unobtainable">Number Unobtainable</string>
    <string name="pay_tone">Pay Tone</string>
    <string name="payphone_recognition">Payphone Recognition</string>
    <string name="positive_accepted">Positive/Accepted</string>
    <string name="special_dial_tone">Special Dial Tone</string>
    <string name="special_information">Special Information</string>
    <string name="congestion_fast_busy_disconnect">Congestion/Fast Busy/Disconnect</string>
    <string name="record">Record</string>
    <string name="warning">Warning</string>
    <string name="contactreceiver_select_a_numer">Select a Number</string>
    <string name="busy_roc">Automatic Callback on Busy Tone</string>
    <string name="desc_busy_roc">An automatic callback on busy tone is an audible indication that the called party is currently busy, but they have enabled the automatic callback after hangup feature. If the calling party confirms their choice to be called back (by pressing a specific key), the callee phone will ring once they hangup, and the caller will then be called back.</string>
    <string name="dialtone_sac">Dial Tone - Send All Calls reminder</string>
    <string name="desc_dialtone_sac">This dial tone signal is used to indicate to warn the user the Send All Calls function is still enabled on this phone line.</string>
    <string name="dialtone_mwi">Dial Tone - Message Waiting</string>
    <string name="desc_dialtone_mwi">This dial tone signal is used to indicate that an unread message is waiting in the voicemail.</string>
</resources>
