<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideInset"

        android:scrollbars="vertical">

    <LinearLayout
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <!-- BUSY -->

        <LinearLayout style="@style/ExtraButtonsLayout">
            <Button android:id="@+id/btnUSBusy" style="@style/ExtraButton" android:text="@string/ex_busy"/>
            <Button android:id="@+id/btnUSBusyAbout" style="@style/ExtraButtonAbout"/>
        </LinearLayout>

        <!-- DIAL TONE -->

        <LinearLayout style="@style/ExtraButtonsLayout">
            <Button android:id="@+id/btnUSDialtone" style="@style/ExtraButton" android:text="@string/ex_dial"/>
            <Button android:id="@+id/btnUSDialtoneAbout" style="@style/ExtraButtonAbout"/>
        </LinearLayout>

        <!-- RINGBACK -->

        <LinearLayout style="@style/ExtraButtonsLayout">
            <Button android:id="@+id/btnUSRingback" style="@style/ExtraButton" android:text="@string/ex_ringback"/>
            <Button android:id="@+id/btnUSRingbackAbout" style="@style/ExtraButtonAbout"/>
        </LinearLayout>

        <!-- OFF-HOOK -->

        <LinearLayout style="@style/ExtraButtonsLayout">
            <Button android:id="@+id/btnUSOffHook" style="@style/ExtraButton" android:text="@string/ex_offhook"/>
            <Button android:id="@+id/btnUSOffHookAbout" style="@style/ExtraButtonAbout"/>
        </LinearLayout>

        <!-- "C-TONE" http://www.jetcityorange.com/wiretap-c-tone/ -->

        <LinearLayout style="@style/ExtraButtonsLayout">
            <Button android:id="@+id/btnUSCTone" style="@style/ExtraButton" android:text="@string/ex_ctone"/>
            <Button android:id="@+id/btnUSCToneAbout" style="@style/ExtraButtonAbout"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>