<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/aboutlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvAppname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:shadowColor="#FF00FF"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/app_name"
                android:textSize="35sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/version"
                android:textSize="18sp" />

            <TextView
                style="@android:style/TextAppearance.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/about_whatsnew"
                android:textStyle="bold" />

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_whatsnew_text" />

            <TextView
                style="@android:style/TextAppearance.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/about_knownissues"
                android:textStyle="bold" />

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_knownissues_text" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btnNetwork47"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:scaleType="centerInside"
            android:onClick="clickNetwork47"
            android:src="@drawable/network47" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGitHub"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/github"
            android:drawableStart="@drawable/github"
            android:onClick="clickGitHub"
            android:text="@string/github_forkme"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/OK"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="clickClose"
            android:text="@string/close"
            android:textSize="12sp"/>
    </LinearLayout>
</LinearLayout>