<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="25dp"
                    android:layout_weight="1"
                    android:text="@string/about_whatsnew_text">
            </TextView>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/store_review_begging"
                    android:textColor="#FFFFCC00"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>

    <Button
            android:id="@id/OK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/OK">
    </Button>

</LinearLayout>